...
          danger
          separated
          onPress={() => {
            onClose();
            onDelete();
          }}
          testID="overflow-delete"
        />
      </View>
    </Sheet>
  );
}

